--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ amarna = "^0.1.5"
 black = "^22.12.0"
 isort = "^5.11.4"
 cairo-coverage = "^0.1.4"
-pytest-xdist = "^3.1.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
