--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 packages = [{include = "kakarot"}]
 
 [tool.poetry.dependencies]
-python = "3.9.1"
+python = ">=3.9,<3.10"
 cairo-lang = "0.10.3"
 openzeppelin-cairo-contracts = "^0.6.0"
 amarna = "^0.1.5"
@@ -18,6 +18,7 @@ black = "^22.12.0"
 isort = "^5.11.4"
 pytest-cov = "^4.0.0"
 starknet-py = "^0.12.0a0"
+cairo-nile = "^0.12.0"
 
 [build-system]
 requires = ["poetry-core"]
